--- a/css/style.scss
+++ b/css/style.scss
@@ -1,49 +1,220 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Mono&subset=cyrillic');
+$color: #0e7aff;
+// $red: #ff1627;
+// $red-l: rgba(230,9,0,0.25);
+$red: #187be2;
+$red-l: rgba(24,123,226,0.25);
+$black: #090909;
 
-*{
+.box-sizing{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-body, 
+.clear{
+	clear: both;
+}
+
 html{
-	width: 100%;
-	height: 100%;
+    background: #151515;
+}
+
+body{
+	font-family: -apple-system, Helvetica, Arial, sans-serif;
+	font-size: 17px;
 	color: #fff;
-	font-family: 'PT Mono', monospace;
-	-webkit-font-smoothing: antialiased;
+    max-width: 1580px;
+    margin: 0 auto;
+    padding: 30px 2%;
+    -webkit-font-smoothing: antialiased;
 }
 
-.code{
-	line-height: 1.2em;
-	padding-bottom: 3em;
-	&_dark{
-		color: rgba(0,0,0,0.3);
-	}
-	&_tab{
-		margin-left: 2em;
+p{
+	color: #fff;
+	line-height: 1.4em;
+}
+
+.link{
+	color: #fff;
+	-webkit-transition: color 0.2s ease;
+    border-bottom: 1px solid rgba(255,255,255,0.25);
+	&:hover, &:active{
+		color: $red;
+        border-bottom: 1px solid $red-l;
 	}
 }
 
-
-.section{
-	padding: 4vw 8vw;
+.header{
+	padding: 0 30px 5em;
+	clear: both;
 	position: relative;
 	&__face{
-		width: 10vw;
-		height: 10vw;
-		position: absolute;
-		top: 4vw;
-		right: 8vw;
-		border-radius: 100px;
+        display: inline-block;
+		width: 100px;
+		height: 100px;
+		border-radius: 50px;
+        position: absolute;
+        right: 30px;
+        top: 0;
 	}
-	&__hello{
-		width: 100%;
-		height: 100%;
-		font-size: 1.4vw;
-		background: rgb(108,83,162);
-	    background: -webkit-linear-gradient(top left, rgba(108,83,162,1) 0%, rgba(67,172,225,1) 100%);
-	    background: -o-linear-gradient(top left, rgba(108,83,162,1) 0%, rgba(67,172,225,1) 100%);
-	    background: linear-gradient(to bottom right, rgba(108,83,162,1) 0%, rgba(67,172,225,1) 100%);
-	    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6c53a2', endColorstr='#43ace1',GradientType=1 );
-	}			
+    &__type{
+        display: inline-block;
+        vertical-align: top;
+        padding-top: 1em;
+    }
+	&__name{
+        font-size: 2.2em;
+        padding-bottom: 0.5em;
+	}
+	&__description{
+        font-size: 1em;
+        position: absolute;
+        top: 21px;
+        left: 270px;
+	}
 }
+
+.grid{
+	&:after{
+		content: '';
+		display: block;
+		clear: both;
+	}
+}
+
+.item{
+	display: block;
+	width: 25%;
+  	padding: 0 30px 70px 30px;
+  	@extend .box-sizing;
+  	&_2x{
+  		width: 50%;
+  		& .item__image{
+  			max-width: 730px;
+  		}
+  	}
+	&__image{
+		padding-bottom: 1em;
+		width: 100%;
+		max-width: 330px;
+        transition: transform 0.4s ease;
+	}
+	&__title{
+		padding-bottom: .1em;
+        font-weight: 700;
+        font-size: 1em;
+	}
+	&__description{
+		padding: 0.5em 0;
+		font-size: 0.8em;
+	}
+	&__do{
+		font-size: 0.8em;
+		color: #555 !important;
+        display: inline-block;
+        background: $black;
+        padding: 4px 9px;
+        border-radius: 3px;
+        margin: 8px 12px 0 -9px;
+	}
+    &__time{
+        margin: 0.3em 0 0.9em 0;
+        font-size: 0.7em;
+        opacity: 0.15;
+    }
+	&:hover .link{
+		color: $red;
+        border-bottom: 1px solid $red-l;
+	}
+    &:hover .item__image{
+        transform: translateY(-10px);
+    }
+    &_nohover{
+        &:hover .item__image{
+            transform: none;
+        }
+    }
+}
+
+.footer{
+	padding: 2em 0px 1em;
+    border-top: 2px solid rgba(255, 255, 255, 0.05);
+    margin: 0 30px;
+    position: relative;
+	&__contact{
+		margin-bottom: 1em;
+	}
+}
+
+.phone{
+	color: #fff;
+}
+
+.social{
+	padding-top: 2em;
+}
+
+.copyright{
+    position: absolute;
+    right: 0;
+    bottom: 1em;
+}
+
+@media screen and (max-width: 1360px) {
+    body{
+        max-width: 1200px;
+    }
+	.item{
+        width: 33.3333%;
+        &_2x{
+            width: 66.6666%;
+        }
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.item{
+        width: 50%;
+        &_2x{
+            width: 100%;
+        }
+	}
+    .header{
+		padding: 0 30px 5em;
+        &__description{
+            font-size: 1em;
+            position: relative;
+            top: 0;
+            left: 0;
+        }
+	}
+    .footer{
+        margin: 0 25px;
+    }
+    .copyright{
+        position: static;
+        padding-top: 2em;
+    }
+}
+
+@media screen and (max-width: 640px) {
+	.item{
+		width: 100%;
+		padding: 0 25px 75px;
+        &__image{
+            width: 100%;
+            max-width: 330px !important;
+        }
+	}
+    .header{
+        &__face{
+            width: 80px;
+            height: 80px;
+            top: 7px;
+        }
+	}	
+}
+
+
